Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -34,7 +34,30 @@
         <h3>
 <a id="welcome-to-potopoly" class="anchor" href="#welcome-to-potopoly" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to Potopoly!</h3>
 
-<p>This is a Monopoly game with the theme of the state of San Luis Potosí. The game is played based on the rules of Monopoly empire.</p>
+<p>This is a Monopoly game with the theme of the state of San Luis Potosí. The game is played based on the rules of Monopoly empire and it is made to be played by 2 to 4 players.</p>
+
+<h3>
+<a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it works</h3>
+
+<p>The board is divided in 36 sections divided in 4 greographical zones of San Luis Potosí (Let's call it SLP from now on) plus 4 corners which have special purposes.</p>
+
+<p>The summary of the board is as follows:</p>
+
+<ul>
+<li>22 locations</li>
+<li>4 bus stations</li>
+<li>3 "Take a chance card" zones.</li>
+<li>3 "Take a community card" zones.</li>
+<li>2 tax zones.</li>
+<li>2 service zones.</li>
+</ul>
+
+<p>Players take turns to roll the dice and either buy or sell their propeties in order to win</p>
+
+<h3>
+<a id="rules-of-the-game" class="anchor" href="#rules-of-the-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rules of the game</h3>
+
+<p>In order to win, players must acquire properties to earn points and fill their tower with locations, some locations are worth more points than te others with the values of 1, 2 and 4 points. The players must reach the exact limit of the game to win.</p>
       </section>
     </div>
 
