--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
 <a id="rules-of-the-game" class="anchor" href="#rules-of-the-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rules of the game</h3>
 
 <p>In order to win, players must acquire properties to earn points and fill their tower with locations, some locations are worth more points than te others with the values of 1, 2 and 4 points. The players must reach the exact limit of the game to win.</p>
+
+<h3>
+<a id="game-board" class="anchor" href="#game-board" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Board</h3>
+
+<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Preview%20tablero.png" alt="Image Board"></p>
       </section>
     </div>
 
