Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -57,12 +57,17 @@
 <h3>
 <a id="rules-of-the-game" class="anchor" href="#rules-of-the-game" aria-hidden="true"><span class="octicon octicon-link"></span></a>Rules of the game</h3>
 
-<p>In order to win, players must acquire properties to earn points and fill their tower with locations, some locations are worth more points than te others with the values of 1, 2 and 4 points. The players must reach the exact limit of the game to win.</p>
+<p>In order to win, players must acquire properties to earn points and fill their tower with locations, some locations are worth more points than the others with the values of 1, 2 and 4 points. The players must reach the exact limit of the game to win.</p>
 
 <h3>
 <a id="game-board" class="anchor" href="#game-board" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Board</h3>
 
 <p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Preview%20tablero.png" alt="Image Board"></p>
+
+<h4>
+<a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documents</h4>
+
+<p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG">Class Diagram</a></p>
       </section>
     </div>
 
