Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -68,6 +68,14 @@
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documents</h4>
 
 <p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG">Class Diagram</a></p>
+
+<h3>
+<a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
+
+<ul>
+<li>Carlos Manuel Gutiérrez Galán (<a href="https://github.com/cmgg" class="user-mention">@cmgg</a>)</li>
+<li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
+</ul>
       </section>
     </div>
 
