Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -74,7 +74,9 @@
 
 <ul>
 <li>Carlos Manuel Gutiérrez Galán (<a href="https://github.com/cmgg" class="user-mention">@cmgg</a>)</li>
-<li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
+<li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)
+This project is part of OOP class in the UASLP <a href="http://objetos2223.github.io/">Link</a>
+</li>
 </ul>
       </section>
     </div>
