Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
 <p>This is a Monopoly game with the theme of the state of San Luis Potosí. The game is played based on the rules of Monopoly empire and it is made to be played by 2 to 4 players.</p>
 
+<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite1.png" alt="Avatar Verde">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite2.png" alt="Avatar Azul">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite3.png" alt="Avatar Rojo">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite4.png" alt="Avatar Blanco"></p>
+
 <h3>
 <a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it works</h3>
 
