--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
 </ul>
 
-<p>This project is part of OOP class in the UASLP <a href="http://objetos2223.github.io/">Link</a></p>
+<p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.</p>
       </section>
     </div>
 
