Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
 </ul>
 
 <p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.</p>
+
+<p>Sound effect's are property of <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a></p>
       </section>
     </div>
 
