Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
 <li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
 </ul>
 
-<p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.</p>
-
-<p>Sound effect's are property of <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a></p>
+<p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.<br>
+Sound effect's are property of <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a><br>
+Background sound property of EA Games and Maxis Studio</p>
       </section>
     </div>
 
