Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <h3>
 <a id="game-board" class="anchor" href="#game-board" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Board</h3>
 
-<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Preview%20tablero.png" alt="Image Board"></p>
+<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/Tablero.png" alt="Image Board"></p>
 
 <h4>
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documents</h4>
