--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG">Class Diagram</a>  </p>
 
-<p><a href="https://github.com/objetos15161/Potopoly/blob/master/Proyecto/Potopoly%20greenfoot.jar?raw=true">.jar File (600KB)</a></p>
+<p><a href="https://github.com/objetos15161/Potopoly/blob/master/Proyecto/Potopoly%20greenfoot.jar?raw=true">.jar File (5.2MB)</a></p>
 
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
