--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 <li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
 </ul>
 
+<p><a href="www.greenfoot.org%2Fscenarios%2F15515&amp;h=zAQHtEVWQ&amp;s=1">Visit the game on its Greenfoot page!</a></p>
+
 <p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.<br>
 Sound effect's are property of <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a><br>
 Background sound property of EA Games and Maxis Studio</p>
