Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
 <h4>
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documents</h4>
 
-<p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG">Class Diagram</a>  </p>
+<p><a href="https://www.lucidchart.com/publicSegments/view/b597c8d3-499d-40eb-8f62-877e54d28406/image.png">Class Diagram</a></p>
+
+<p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG"><strong>OBSOLETE</strong> <em>Class Diagram</em></a></p>
+
+<p><a href="https://www.lucidchart.com/invitations/accept/de494c78-c251-4a2e-8bcc-4bc98395c2f7">On Lucidchart</a></p>
 
 <p><a href="https://github.com/objetos15161/Potopoly/blob/master/Proyecto/Potopoly%20greenfoot.jar?raw=true">.jar File (5.2MB)</a></p>
 
