--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <p><a href="https://github.com/objetos15161/Potopoly/blob/master/Proyecto/Potopoly%20greenfoot.jar?raw=true">.jar File (5.2MB)</a></p>
 
-<p><a href="https://youtu.be/O3xhidxbKgM">YouTube Link</a></p>
+<p><a href="https://youtu.be/mZ1A6HLsasg">YouTube Link</a></p>
 
 <h3>
 <a id="authors" class="anchor" href="#authors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors</h3>
@@ -90,7 +90,7 @@
 <li>Salvador Salinas Serrano (<a href="https://github.com/chava2708" class="user-mention">@chava2708</a>)</li>
 </ul>
 
-<p><a href="http://www.greenfoot.org/scenarios/15515">Visit the game on its Greenfoot page!</a></p>
+<p><a href="http://www.greenfoot.org/scenarios/15603">Visit the game on its Greenfoot page!</a></p>
 
 <p>This project is part of <a href="http://objetos2223.github.io/">object oriented programming class</a> in the engineering faculty of the UASLP.<br>
 Sound effect's are property of <a href="http://www.freesfx.co.uk">http://www.freesfx.co.uk</a><br>
