Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 <p><a href="https://www.lucidchart.com/invitations/accept/de494c78-c251-4a2e-8bcc-4bc98395c2f7">On Lucidchart</a></p>
 
-<p><a href="https://github.com/objetos15161/Potopoly/blob/master/Proyecto/Potopoly%20greenfoot.jar?raw=true">.jar File (5.2MB)</a></p>
+<p><a href="https://github.com/objetos15161/Potopoly/raw/master/Potopoly%20greenfoot.jar">.jar File (5.2MB)</a></p>
 
 <p><a href="https://youtu.be/mZ1A6HLsasg">YouTube Link</a></p>
 
