Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 
 <p>This is a Monopoly game with the theme of the state of San Luis Potosí. The game is played based on the rules of Monopoly empire and it is made to be played by 2 to 4 players.</p>
 
-<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite1.png" alt="Avatar Verde">
-<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite2.png" alt="Avatar Azul">
-<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite3.png" alt="Avatar Rojo">
-<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/sprite4.png" alt="Avatar Blanco"></p>
+<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Potopoly%20greenfoot/images/Sprite1.png" alt="J1">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Potopoly%20greenfoot/images/Sprite2.png" alt="J2">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Potopoly%20greenfoot/images/Sprite3.png" alt="J3">
+<img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Potopoly%20greenfoot/images/Sprite4.png" alt="J4"></p>
 
 <h3>
 <a id="how-it-works" class="anchor" href="#how-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>How it works</h3>
@@ -67,14 +67,14 @@
 <h3>
 <a id="game-board" class="anchor" href="#game-board" aria-hidden="true"><span class="octicon octicon-link"></span></a>Game Board</h3>
 
-<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Imagenes/Tablero.png" alt="Image Board"></p>
+<p><img src="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Potopoly%20greenfoot/images/Tablero.png" alt="Game board"></p>
 
 <h4>
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>Documents</h4>
 
-<p><a href="https://www.lucidchart.com/publicSegments/view/b597c8d3-499d-40eb-8f62-877e54d28406/image.png">Class Diagram</a></p>
+<p><a href="https://www.lucidchart.com/publicSegments/view/b597c8d3-499d-40eb-8f62-877e54d28406/image.png">Final class diagram</a></p>
 
-<p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG"><strong>OBSOLETE</strong> <em>Class Diagram</em></a></p>
+<p><a href="https://raw.githubusercontent.com/objetos15161/Potopoly/master/Proyecto/Diagrama%20de%20clases.PNG">Original class diagram</a></p>
 
 <p><a href="https://www.lucidchart.com/invitations/accept/de494c78-c251-4a2e-8bcc-4bc98395c2f7">On Lucidchart</a></p>
 
